# canon-ratiola

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapter/: engine.rs  mod.rs  processor.rs
src/adapter/callback/: mod.rs
src/adapter/command/: chargeback_handler.rs  deposit_handler.rs  dispute_handler.rs  mod.rs  resolve_handler.rs  withdraw_handler.rs
src/adapter/distributed/: client.rs  mod.rs  registry.rs
src/adapter/event/: chargebacked_handler.rs  deposited_handler.rs  disputed_handler.rs  mod.rs  resolved_handler.rs  withdrawn_handler.rs
src/adapter/indexes/: mod.rs
src/adapter/journal/: lookup.rs  memory.rs  mod.rs
src/domain/: engine.rs  error.rs  journal.rs  mod.rs  orchestrator.rs  state.rs
src/domain/command/: mod.rs
src/domain/event/: mod.rs
src/port/: callback.rs  command.rs  engine.rs  event.rs  indexes.rs  journal.rs  lookup.rs  mod.rs  snapshot.rs
src/service/: boot.rs  mock.rs  mod.rs  orchestrator.rs
tests/: context.rs  lib.rs
tests/basic/: chargeback_tests.rs  deposit_tests.rs  dispute_tests.rs  frozen_account_tests.rs  integration_tests.rs  mod.rs  withdrawal_tests.rs
tests/infrastructure/: idempotency_tests.rs  mod.rs  ordering_tests.rs
tests/integration/: csv_orchestrator_tests.rs  mod.rs  multi_client_tests.rs
tests/unit/: mod.rs
tests/unit/command_handlers/: chargeback_handler.rs  deposit_handler.rs  dispute_handler.rs  resolve_handler.rs  withdraw_handler.rs
tests/unit/event_handlers/: chargebacked_handler.rs  deposited_handler.rs  disputed_handler.rs  mod.rs  resolved_handler.rs  (+1 more)
