[package]
name = "payment"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "payment"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
rand = "0.9.2"
ractor = { version = "0.15.9", features = ["blanket_serde", "async-trait", "cluster"] }
ractor_cluster = { version = "0.15.9", features = ["async-trait", "monitors"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.13.0"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
lto = true
opt-level = 3
debug = false
